@@ -25,7 +25,7 @@ need_local_regex := no
 
 # shared library- set to yes if you would like to build
 
-buildshare := yes
+buildshare := no
 
 
 # VCL library- set to yes if you would like to build
